--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,9 @@ edition = "2018"
 [dependencies]
 encoding_rs = "0.8.32"
 lazy_static = "1.4.0"
-regex = "1.5.5"
+regex = { version = "1.5.5", optional = true }
+regex-lite = { version = "0.1" }
+
+[features]
+default = ["unicode"]
+unicode = ["dep:regex"]
